# easy-agent

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  easy-agent.yml  pyproject.toml
examples/skills/python_echo/: hook.py
src/easy_agent/: __init__.py  cli.py  config.py  graph.py  mcp.py  models.py  protocols.py  runtime.py  skills.py  storage.py  tools.py
tests/: test_config.py  test_graph.py  test_mcp.py  test_protocols.py  test_skills.py  test_storage.py
